test/library/standard/Reflection/getFieldRef-param.3.good
getFieldRef-param.chpl:20: error: cannot return a reference to 'param' field 'x'
